<resources>

    <string name="app_name">UserProfile</string>
    <!-- NAME -->
    <string name="name">Dumitrascu-Ungar Kevin</string>
    <!-- BIRTHDAY -->
    <string name="birthday">12/03/1994</string>
    <!-- COUNTRY -->
    <string name="country">Brasov, Romania</string>
    <!-- CONTACT ME -->
    <string name="contact_me">Contact Me</string>
    <!-- CONTENT -->
    <string name="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchangede</string>

</resources>
